--- a/vignettes/statgenSSA.Rmd
+++ b/vignettes/statgenSSA.Rmd
@@ -17,7 +17,7 @@ vignette: >
 knitr::opts_chunk$set(
 collapse = TRUE,
 comment = "#>",
-fig.dim = c(6, 4)
+fig.dim = c(7, 4)
 )
 library(statgenSSA)
 ```
@@ -28,31 +28,21 @@ The statgenSSA package is developed as an easy-to-use package for analyzing data
 plant breeding experiments with many options for plotting and reporting 
 the results of the analyses.  
 
-The package has three main components:
-
-* Single trial analysis
-* Genotype by Environment (GxE) analysis
-* QTL analysis
-
-This vignette deals with the modeling part of the package and describes in 
-detail how to prepare data for analysis, perform analyses using different
-modeling engines and extract the results from the models.
+This vignette describes in detail how to prepare data for analysis, perform analyses using different modeling engines and extract the results from the models.
 
 ----
 
 # Data preparation
 
 The first step when modeling field trial data or performing a GxE analysis with 
-the statgenSSA package is creating an object of class `TD` (Trial Data). This object is used by the statgenSSA package for performing most analyses.  
+the statgenSSA package is creating an object of class `TD` (Trial Data). This object is used throughout the statgenSSA package as input for analyses.  
 
 ## Creating a `TD` object
 
 A `TD` object can be created from a `data.frame` with the function `createTD`. 
 This function does a number of things:  
 
-* Rename columns to default column names used by the functions in the RAP package. 
-For example, the column in the data containing variety/accession/genotype is renamed to 
-"genotype". Original column names are stored as an attribute of the `TD` object.
+* Rename columns to default column names used by the functions in the statgenSSA package. For example, the column in the data containing variety/accession/genotype is renamed to "genotype". Original column names are stored as an attribute of the `TD` object.
 * Convert column types to the default column types. For example, the column 
 "genotype" is converted to a factor and "rowCoord" to a numeric column.
 * Split the data into separate data.frames by trial. A `TD` object is a
@@ -185,7 +175,7 @@ plot(wheatTD, trials = "SR_FI_11", highlight = c("G278", "G279"))
 ```
 
 It is also possible to color the subBlocks within the field.
-```{r layoutPlotSB, fig.dim = c(6, 5)}
+```{r layoutPlotSB, fig.dim = c(7, 5)}
 ## Plot the layout for SR_FI_11, color subBlocks.
 plot(wheatTD, trials = "SR_FI_11", colorSubBlock = TRUE)
 ```
@@ -194,7 +184,7 @@ Highlighting genotypes and coloring subBlocks cannot be done simultaneously. If
 both options are specified, only highlighting is done.    
 
 Finally, it is possible to add the names of the genotypes to the layout. 
-```{r layoutPlotSG, fig.dim = c(6, 5)}
+```{r layoutPlotSG, fig.dim = c(7, 5)}
 ## Plot the layout for SR_FI_11, color subBlocks.
 plot(wheatTD, trials = "SR_FI_11", showGeno = TRUE)
 ```
@@ -324,15 +314,17 @@ goodness-of-fit criterion works as follows
 ```{r fitAs, message=FALSE, results='hide'}
 if (requireNamespace("asreml", quietly = TRUE)) {
   ## Fit a spatial single trial model using asreml.
-  modWheatAs <- fitTD(TD = wheatTD, trials = "SR_FI_11", traits = "GY", design = "res.rowcol", trySpatial = TRUE, engine = "asreml", control = list(criterion = "BIC"))
+  modWheatAs <- fitTD(TD = wheatTD, trials = "SR_FI_11", traits = "GY", 
+                      design = "res.rowcol", trySpatial = TRUE, engine = "asreml",
+                      control = list(criterion = "BIC"))
 }
 ```
 The fitted models and the best model are stored in the output together with a summary
 table with details on the fitted models.
-```{r spatCh}
+```{r spatCh, R.options=list(width=90)}
 if (exists("modWheatAs")) {
-  ## Overview of fitted models
-  print(modWheatAs$SR_FI_11$sumTab$GY, digits = 2)
+  ## Overview of fitted models.
+  print(modWheatAs$SR_FI_11$sumTab$GY, digits = 2, row.names = FALSE)
 }  
 ```
 `r if (exists("modWheatAs")) {"As the overview shows the best model, the model with the lowest BIC, is AR1(x)AR1."}`
@@ -356,8 +348,7 @@ a scatter plot of residuals against fitted values and a scatter plot of absolute
 value of residuals against fitted values. These plots can be made by calling 
 `plot` on the `SSA` object. Plots can be made for multiple trials and multiple traits 
 simultaneously, either for the model with genotype as fixed effect or for the model 
-with genotype as random effect. By default plots are made for all trials and all traits, 
-but this can be restricted using the parameters `trials` and `traits`. If only one model is fitted, i.e. only the model with genotype as fixed effect or only the model with genotype as random effect, the results of this model will be plotted. In case both models were fitted, as a default the results will be plotted for the model with genotype fixed. This can be changed using the parameter `what`.
+with genotype as random effect. By default plots are made for all trials and all traits, but this can be restricted using the parameters `trials` and `traits`. If only one model is fitted, i.e. only the model with genotype as fixed effect or only the model with genotype as random effect, the results of this model will be plotted. In case both models were fitted, as a default the results will be plotted for the model with genotype fixed. This can be changed using the parameter `what`.
 ```{r basePlot}
 ## Base plots for the model with genotype fitted as random effect.
 plot(modWheatSp, what = "random")
@@ -381,16 +372,14 @@ the pdf report are saved. By editing the tex file it is possible to modify the r
 
 When no outfile is specified, a report will be created with a default name, i.e. "modelReport.pdf", in the current working directory. The parameter `outfile` can be used to change the location. This value of this parameter should be a valid location and name for a **pdf** file, i.e. including the postfix ".pdf". Non-existing directories are created by the `report` function.  
 
-The report contains general information on the model fitted, a summary of the results, 
-the plots described in the previous section, a `list` of best (highest BLUEs or BLUPs) genotypes and a scatter plot of all genotypes and their BLUEs or BLUPs. If, for the modeled trait, a low value means the genotype is performing well, then the selection on the best genotypes can be based on the lowest BLUEs or BLUPs by setting the parameter `descending` to `TRUE` in the report function.
+The report contains general information on the model fitted, a summary of the results, the plots described in the previous section, a `list` of best (highest BLUEs or BLUPs) genotypes and a scatter plot of all genotypes and their BLUEs or BLUPs. If, for the modeled trait, a low value means the genotype is performing well, then the selection on the best genotypes can be based on the lowest BLUEs or BLUPs by setting the parameter `descending` to `TRUE` in the report function.
 ```{r modRep, eval=FALSE}
 ## Create a report in the current working directory
 report(modWheatSp)
 ## Create a report for the model with genotype fitted as random.
 report(modWheatSp, outfile = "./myReports/wheatReport.pdf", what = "random")
 ```
-Reporting for an `SSA` object is always done for one trait in one trial for one fitted model. Parameters `trait`, `trial` and `what` can be used for selecting the model for
-which the report should be made.
+Reporting for an `SSA` object is always done for one trait in one trial for one fitted model. Parameters `trait`, `trial` and `what` can be used for selecting the model for which the report should be made.
 
 ----
 
@@ -405,8 +394,7 @@ can only extracted if genotype was fitted as fixed effect whereas BLUPs and heri
 
 All results that can be extracted are shown in the table below. The first column
 shows what model needs to be fitted in order to be able to extract the result.
-Here F stands for genotype as fixed effect and R for genotype as random effect. In the 
-second column is the result. This is also the value to be used for the parameter
+Here F stands for genotype as fixed effect and R for genotype as random effect. In the second column is the result. This is also the value to be used for the parameter
 `what` in `extract` needed to extract the corresponding result. The last 
 column gives a short description of the result that will be extracted and, where
 needed, also states for which modeling engines it can be extracted.
@@ -469,8 +457,7 @@ head(BLUEsWheat2[["SR_FI_11"]]$BLUEs)
 ```
 Not every column from the original `TD` object can be included in the extracted 
 data in this way. Only columns for which the values are uniform per genotype can 
-be included. For example, the column `repId` containing replicates, that has several different values for a single genotype, cannot be included. When trying to do so it will 
-be dropped with a warning.  
+be included. For example, the column `repId` containing replicates, that has several different values for a single genotype, cannot be included. When trying to do so it will be dropped with a warning.  
 It is however possible to include `repId` when extracting fitted values, since 
 for each observation in the original data a fitted value is computed. 
 ```{r extFit}
@@ -495,7 +482,7 @@ TDGxE <- SSAtoTD(SSA = modWheatSpTot, what = c("BLUEs", "seBLUEs"))
 TDGxE2 <- SSAtoTD(SSA = modWheatSpTot, what = c("BLUEs", "seBLUEs"), addWt = TRUE)
 ```
 
-See the vignette [Genotype by Environment analysis using RAP](RAPGxE.html) for an overview of how to use the input just created for performing GxE analysis.
+Performing GxE analysis on the `TD` object can be done using the statgenGxE package.
 
 ----
 
