--- a/inst/reports/modelReport.Rnw
+++ b/inst/reports/modelReport.Rnw
@@ -177,10 +177,8 @@ if (engine == "SpATS") {
   ## Print table of effective dimensions
   effDims <- SpATSSum$p.table.dim
   rownames(effDims)[is.na(rownames(effDims))] <- ""
-  for (i in seq_along(renameVars[["renameFrom"]])) {
-    rownames(effDims)[rownames(effDims) == renameVars[["renameFrom"]][i]] <-
-      renameVars[["renameTo"]][i]
-  }
+  ## Rename rows for more user readable output.
+  effDims <- renameRows(effDims)
   print(xtable::xtable(x = effDims, caption = "Effective dimensions",
                        label = "effDims",
                        align = c("l", "r", "r", "r", "r", "r")),
