--- a/vignettes/statgenSSA.Rmd
+++ b/vignettes/statgenSSA.Rmd
@@ -24,7 +24,7 @@ library(statgenSSA)
 
 # The statgenSSA Package  
 
-The statgenSSA package is developed as an easy-to-use package for analyzing data of plant breeding experiments with many options for plotting and reporting the results of the analyses.  
+The statgenSSA (Single Site Analysis) package is developed as an easy-to-use package for analyzing data of plant breeding experiments with many options for plotting and reporting the results of the analyses.  
 
 This vignette describes in detail how to prepare data for analysis, perform analyses using different modeling engines and extract the results from the models.
 
@@ -32,7 +32,7 @@ This vignette describes in detail how to prepare data for analysis, perform anal
 
 # Data preparation
 
-The first step when modeling field trial data or performing a GxE analysis with the statgenSSA package is creating an object of class `TD` (Trial Data). This object is used throughout the statgenSSA package as input for analyses.  
+The first step when modeling field trial data with the statgenSSA package is creating an object of class `TD` (Trial Data). This object is used throughout the statgenSSA package as input for analyses.  
 
 ## Creating a `TD` object
 
@@ -41,16 +41,16 @@ A `TD` object can be created from a `data.frame` with the function `createTD`. T
 * Rename columns to default column names used by the functions in the statgenSSA package. For example, the column in the data containing variety/accession/genotype is renamed to "genotype". Original column names are stored as an attribute of the `TD` object.
 * Convert column types to the default column types. For example, the column  "genotype" is converted to a factor and "rowCoord" to a numeric column.
 * Split the data into separate data.frames by trial. A `TD` object is a `list` of `data.frames` where each `data.frame` contains the data for a single trial. If there is only one trial or no column trial is defined, the output will be a `list` with only one item.
-* Add meta data to the separate `data.frames` in the `TD` object. The meta data consists of location, date of the experiment, longitude, latitude, trial design, plot width and plot length. None of these is strictly neccessary for any analysis but the meta data is used for plotting field layouts, plotting trials on a map and naming plots. Meta data for a single trial can simply be added when creating the `TD` object using the parameters in `createTD`. However if the data consists of multiple trials with different meta data per trial it is more convenient to first create a `TD` object without adding meta data. This will still add a location based on the name of the trial. After creating the `TD` object, the meta data can then be extracted using `getMeta`. This function creates a `data.frame` with the meta data per trial. The content of this `data.frame` can then be modified and added back to the `TD` object using `setMeta`.  
+* Add meta data to the `TD` object. This meta data is used to store background information about the trial. It consists of location, date of the experiment, longitude, latitude, trial design, plot width and plot length. None of these are strictly neccessary for any analysis and meta data can therefore be safely ignored. However the meta data is used when plotting field layouts, plotting trials on a map and naming plots. Meta data can be added when creating the `TD` object using the appropriate parameters in `createTD` (see 2.4). However if the data consists of multiple trials it is more convenient to first create a `TD` object without meta data and the add meta data using the `getMeta` and `setMeta` functions (see 2.3).
 
 After creating a `TD` object, data for new trials can be added to it using  `addTD`. This function works in exactly the same way as `createTD` except that it adds data to an existing `TD` object instead of creating a new one.  
-Dropping one or more trials from a `TD` object can be done using the function `dropTD` specifying the trials to be dropped in the parameter `rmTrials`.
+Dropping one or more trials from a `TD` object can be done using the function `dropTD`.
 
 ## Example
 
-Field data from an experiment with wheat in Chile described in detail by  @Lado2013 will be used as an example throughout this vignette. The experiment was performed in two locations in Chile, Santa Rosa and Cauquenes, with two different drought regimes in 2011 and 2012 for the Santa Rosa and one trial in 2012 for Cauquenes. For 384 genotypes four traits were measured in 2011, but in 2012 only grain yield (GY) was measured and the examples will mainly focus on this trait.  
+Field data from an experiment with wheat in Chile described in detail by  @Lado2013 will be used as an example throughout this vignette. The experiment was performed in two locations in Chile, Santa Rosa and Cauquenes, with two different drought regimes in 2011 and 2012 for the Santa Rosa and one trial in 2012 for Cauquenes. For 384 genotypes four traits were measured in 2011, but in 2012 only grain yield (GY) was measured and the examples will focus on this trait.  
 
-For the example first a `TD` object is created for the first location and the data for the second location is then added later on. In practice all this could be done in one go.
+For the example, first a `TD` object is created for the first location only. The data for the second location is then added later on. In practice all this could be done in one go.
 ```{r createTD}
 ## Create a TD object containing the data from Santa Rosa.
 data("wheatChl")
@@ -60,9 +60,20 @@ wheatTD <- createTD(data = wheatChl[wheatChl$trial != "C_SWS_12", ],
 ```
 The `TD` object just created is a `list` with four items, one for each trial  (combination of location, drought regime and year) in the original `data.frame`. The column "trt" in the original data is renamed to "genotype" and converted to a factor. The columns "rep" and "bl" are renamed and converted likewise. The columns "row" and "col" are renamed to "rowCoord" and "colCoord" respectively. Simultaneously two columns "rowId" and "colId" are created containing the same information converted to a factor. This seemingly duplicate information is needed for spatial analysis. It is possible to define different columns as "rowId" and "colId" than the ones used as "rowCoord" and "colCoord". The information about which columns have been renamed when creating a `TD` object is stored as an attribute of each individual `data.frame` in the object.
 
-## Meta data
+## Meta data {#meta}
 
-The meta data will be a `data.frame` with four rows, one for each trial in `wheatTD`.
+The meta data will be a `data.frame` with four rows, one for each trial in `wheatTD`. The `data.frame` has the following columns:    
+
+| | Content | Usage | 
+|:----------|:------------|:--------------------------------------------------------------|
+|trLocation | Location | Default names for plots and reports|
+|trDate | Date | |
+|trDesign | Design | Model specification (see [**3.1**](#modType)) |
+|trLat | Latitude | Position in a map plot (see [**2.6**](#TDPlot)) |
+|trLong | Longitude | Position in a map plot (see [**2.6**](#TDPlot)) |
+|trPlWidth | Plot width | Ratio of width/height in a layout plot |
+|trPlLength | Plot length | Ratio of width/height in a layout plot |
+
 ```{r getMeta}
 ## Extract meta data from the TD object. 
 (wheatMeta <- getMeta(TD = wheatTD))
@@ -96,7 +107,7 @@ getMeta(TD = wheatTD)
 
 ## Summarizing a `TD` object
 
-The `summary` function can be used to get an idea of the content of the data in the `TD` object. Multiple traits may be summarized at once but for clarity here a summary is only made for GY.
+The `summary` function can be used to get an idea of the content of the data in the `TD` object. Multiple traits can be summarized at once but for clarity here a summary is only made for GY.
 ```{r TDsum}
 ## Create a summary for grain yield in SR_FI_11.
 summary(wheatTD, trial = "SR_FI_11", traits = "GY")
@@ -110,9 +121,9 @@ It is possible to summarize the data in a TD object for different groups. This c
 summary(wheatTD, trial = "SR_FI_11", traits = "GY", groupBy = "repId")
 ```
 
-## Plotting a `TD` object
+## Plotting a `TD` object {#TDPlot}
 
-Several plots can be made to further investigate the contents of a `TD` object.    
+Several plots can be made to further investigate the contents of a `TD` object. 
 
 The default plot creates plots for the layout of all trials in the `TD` object. This can be restricted to selected trials using the `trials` parameter. The width and length of the plot are derived from "trPlWidth" and "trPlLength" in the meta data if these are available.  
 ```{r layoutPlot}
@@ -169,11 +180,11 @@ plot(wheatTD, plotType = "cor", traits = "GY")
 
 # Modeling
 
-After creating a `TD` object, a model can be fitted on the trial data. This is done using the function `fitTD`. Depending on the design of the trial several different models can be fitted. The design can be given as a parameter in the function or included in the meta data of the `TD` object. In the former case the same model will be fitted for all trials, in the latter different models can be fitted for different trials depending on the design. If both are available the function parameter will always be leading. 
+After creating a `TD` object, a model can be fitted on the trial data. This is done using the function `fitTD`. The exact model fitted depends on the design of the trial (see [**3.1**](#modType)). The design can be given as a parameter in the function or included in the meta data of the `TD` object as described in [**2.3**](#meta). In the former case, the same model will be fitted for all trials, in the latter, different models can be fitted for different trials. If both are available the function parameter will always be leading. 
 
 The output of `fitTD` is an object of class `SSA` (Single Site Analysis), a `list` of fitted models with one item for each trial the model was fitted for. 
 
-## Model types
+## Model types {#modType}
 
 `fitTD` uses three different engines for fitting the models, namely SpATS [@RodAlv2017], lme4 [@Bates2015] and asreml [@Gilmour2017]. For models with row column or resolvable row column design, SpATS is the default engine, for the other models lme4. This can always be overruled by specifying the function parameter `engine`.
 
@@ -188,11 +199,11 @@ row column design | rowcol | trait = genotype + **rowId** + **colId** + $\epsilo
 resolvable row column design | res.rowcol | trait = genotype + *repId* + **repId:rowId** + **repId:colId** + $\epsilon$ |
 
 In the models above, fixed effects are indicated in *italics* whereas random effects are indicated in **bold**. genotype can be fitted as fixed or as random effect depending on the value of the parameter `what`. Extra fixed effects may be fitted using the parameter `covariates`.  
-If SpATS is used as modeling engine, an extra spatial term is always included in the model. The same is done when the engine is asreml and the function parameter `trySpatial` is set to `TRUE`.
+If SpATS is used as modeling engine, an extra spatial term is always included in the model (see [**3.2**](#spMod)). A spatial term is also included when the modeling engine is asreml and the function parameter `spatial` is set to `TRUE`.
 
-Using the `TD` object wheatTD from the previous section, a model for the trial SR_FI_11 and trait GY can now be fitted on the data as follows. For the design of the trial a resolvable row column design is assumed. Since `engine` is not supplied as a parameter SpATS is used for fitting the model.
+Using the `TD` object wheatTD from the previous section, a model for the trial SR_FI_11 and trait GY can now be fitted on the data. The trial was set up using a resolvable row column design. This is specified in `fitTD` using the parameter `design`. Since `engine` is not supplied as a parameter, SpATS is used for fitting the model.
 ```{r fitSp, message=FALSE}
-## Fit a single trial model.
+## Fit a single trial model using a model based on a residual row column design.
 modWheatSp <- fitTD(TD = wheatTD, trials = "SR_FI_11", traits = "GY", design = "res.rowcol")
 ```
 Note that by not supplying the `what` argument to the function, two models are fitted, one with genotype as a fixed effect and one with genotype as a random effect. The results of both these models are stored in the `SSA` object `modWheatSp`. This is very useful for extracting different results from the model later on. A trade-off is that fitting two models takes more time than fitting only one so when fitting models on large datasets it is sensible to explicitly define `what` if only a subset of the results are needed as output.
@@ -202,7 +213,7 @@ modWheatSp2 <- fitTD(TD = wheatTD, trials = "SR_FI_11", traits = "GY",
                      what = "random", design = "res.rowcol")
 ```
 
-## Spatial models
+## Spatial models {#spMod}
 
 When using SpATS as a modeling engine for fitting a model, an extra spatial component is always included in the model. This spatial component is composed using the `PSANOVA` function in the SpATS package which uses 2-dimensional smoothing with P-splines as described in @Lee2013 and in @RodAlv2017. See `help(PSANOVA, SpATS)` for a detailed description. The parameters `nseg` and `nest.div` of `PSANOVA` can be modified using the `control` parameter in `fitTD`.  
 Fitting the model in the previous section specifying the number of segments for both rows and columns as 20 works as follows
@@ -213,13 +224,13 @@ modWheatSp3 <- fitTD(TD = wheatTD, trials = "SR_FI_11", traits = "GY",
                      design = "res.rowcol", control = list(nSeg = c(20, 20)))
 ```
 
-Alternatively, spatial models can be fitted using asreml as modeling engine and setting the parameter `trySpatial = TRUE`. In this case seven models are fitted and the best model, based on a goodness-of-fit criterion, either AIC or BIC, is chosen. For a full specification of the models fitted see `help(fitTD)`. The criterion to be used can be specified using the `control` parameter in `fitTD`.  
+Alternatively, spatial models can be fitted using asreml as modeling engine and setting the parameter `spatial = TRUE`. In this case seven models are fitted and the best model, based on a goodness-of-fit criterion, either AIC or BIC, is chosen. For a full specification of the models fitted see `help(fitTD)`. The criterion to be used can be specified using the `control` parameter in `fitTD`.  
 Fitting a model similar to the one above using asreml with BIC as goodness-of-fit criterion works as follows
 ```{r fitAs, message=FALSE, results='hide'}
 if (requireNamespace("asreml", quietly = TRUE)) {
   ## Fit a spatial single trial model using asreml.
   modWheatAs <- fitTD(TD = wheatTD, trials = "SR_FI_11", traits = "GY", 
-                      design = "res.rowcol", trySpatial = TRUE, engine = "asreml",
+                      design = "res.rowcol", spatial = TRUE, engine = "asreml",
                       control = list(criterion = "BIC"))
 }
 ```
@@ -230,9 +241,9 @@ if (exists("modWheatAs")) {
   print(modWheatAs$SR_FI_11$sumTab$GY, digits = 2, row.names = FALSE)
 }  
 ```
-`r if (exists("modWheatAs")) {"As the overview shows the best model, the model with the lowest BIC, is AR1(x)AR1."}`
+`r if (exists("modWheatAs")) {"As the overview shows the best model, the model with the lowest BIC, is AR1(x)AR1 with units in the random part of the model."}`
 
-## Model output
+## Model summary
 
 Since genotype has been fitted both as fixed and as random factor in `modWheatSp` it is possible to calculate both the Best Linear Unbiased Estimators (BLUEs) and the Best Linear Unbiased Predictors (BLUPs). Therefore both are printed in the summary of the model together with their respective standard errors.
 ```{r fitSum, message=FALSE}
@@ -242,10 +253,10 @@ summary(modWheatSp, nBest = 5)
 
 ## Model plots
 
-Two types of plots can be made for fitted models. The first is a series of four plots, a histogram of the residuals, normal quantiles of the residuals, a scatter plot of residuals against fitted values and a scatter plot of absolute value of residuals against fitted values. These plots can be made by calling `plot` on the `SSA` object. Plots can be made for multiple trials and multiple traits simultaneously, either for the model with genotype as fixed effect or for the model with genotype as random effect. By default plots are made for all trials and all traits, but this can be restricted using the parameters `trials` and `traits`. If only one model is fitted, i.e. only the model with genotype as fixed effect or only the model with genotype as random effect, the results of this model will be plotted. In case both models were fitted, as a default the results will be plotted for the model with genotype fixed. This can be changed using the parameter `what`.
+Two types of plots can be made for fitted models. The first is a series of four plots, a histogram of the residuals, normal quantiles of the residuals, a scatter plot of residuals against fitted values and a scatter plot of absolute value of residuals against fitted values. These plots can be made by calling `plot` on the `SSA` object. Plots can be made for multiple trials and multiple traits simultaneously, either for the model with genotype as fixed effect or for the model with genotype as random effect. By default plots are made for all trials and all traits, but this can be restricted using the parameters `trials` and `traits`. If only one model is fitted the results of the fitted model will be plotted. In case both models were fitted, as a default the results will be plotted for the model with genotype fixed. This can be changed using the parameter `what`.
 ```{r basePlot}
 ## Base plots for the model with genotype fitted as random effect.
-plot(modWheatSp, what = "random")
+plot(modWheatSp, plotType = "base", what = "random")
 ```
 
 The second type of plot consists of five plots, spatial plots of the raw data, fitted values, residuals and either BLUEs or BLUPs, and a histogram of the BLUEs or BLUPs. If SpATS was used for modeling an extra plot with the fitted spatial trend is included. The spatial trend can be displayed on the original scale (`spaTrend = "raw"`) or as percentega (`spaTrend = "percentage"`). In the latter case the spatial trend is scaled (i.e., divided by the average of the observed response variable of interest across the field) and displayed as percentage. The call for creating these plots differs from the base plots only by an extra parameter `plotType = "spatial"`. Note that spatial plots can only be made if spatial information, i.e. `rowCoord` and `colCoord`, is available in the `TD` object.
@@ -271,7 +282,7 @@ The output of the outlier detection function is a data.frame with the outliers a
 
 It is possible to run outlier detection on a model with genotype fitted as fixed, but when doing so it is only possible to detect outliers in genotypes that are replicated in the data. For unreplicated genotypes the residual will always be 0 and so these will never be marked as outliers.    
 
-To get an idea of the magnitude of the outliers the parameter commonFactors can be used to see the values of observations with similar characteristics. In the example below, for all outliers also the other observations for the same genotype are shown.
+To get an idea of the magnitude of the outliers, the parameter commonFactors can be used to see the values of observations with similar characteristics. In the example below, for all outliers also the other observations for the same genotype are shown.
 ```{r outDetCom}
 ## Outlier detection for the model with genotype fitted as random.
 ## A custom limit is used and commonFactors set to genotype.
@@ -283,29 +294,30 @@ outliers <- outlierSSA(modWheatSp, traits = "GY", what = "random",
 
 For `SSA` objects there is a `report` function available in the statgenSSA package. This function creates a pdf report summarizing the main results of the fitted model. Also the tex file and figures used for generating the pdf report are saved. By editing the tex file it is possible to modify the report to ones needs, creating high flexibility.  
 
-When no outfile is specified, reports will be created with a default names, e.g. "modelReport_trial_trait_fixed_timestamp.pdf", in the current working directory. The parameter `outfile` can be used to change the name and location of the report. The value of this parameter should be a valid location and name for a **pdf** file, i.e. including the postfix ".pdf". Non-existing directories are created by the `report` function. When an outfile is supplied trial, trait and modeltype (fixed or random) are concatenated to it in the name of the report.
+When no outfile is specified, reports will be created with a default names, e.g. "modelReport_trial_trait_fixed_timestamp.pdf", in the current working directory. The parameter `outfile` can be used to change the name and location of the report. The value of this parameter should be a valid location and name for a **pdf** file, i.e. including the postfix ".pdf". Non-existing directories are created by the `report` function. When an outfile is supplied, trial, trait and modeltype (fixed or random) are concatenated to it in the name of the report.
 
-The reports contains general information on the model fitted, a summary of the results, the plots described in the previous section, a `list` of best (highest BLUEs or BLUPs) genotypes and a scatter plot of all genotypes and their BLUEs or BLUPs. If, for the modeled trait, a low value means the genotype is performing well, then the selection on the best genotypes can be based on the lowest BLUEs or BLUPs by setting the parameter `descending` to `TRUE` in the report function.
+The reports contains general information on the model fitted, a summary of the results, the plots described in the previous section, a `list` of best (highest BLUEs or BLUPs) genotypes and a scatter plot of all genotypes and their BLUEs or BLUPs. For some traits a low value might mean a genotype is performing well. To correctly show the best genotypes in the report in this case, set the parameter `descending` to `TRUE` in the report function.
 ```{r modRep, eval=FALSE}
 ## Create a report in the current working directory
 report(modWheatSp)
 ## Create a report for the model with genotype fitted as random.
 report(modWheatSp, outfile = "./myReports/wheatReport.pdf", what = "random")
 ```
-Reporting for an `SSA` object can be done for multiple trials, traits and modeltypes simultaneously. For each combination of trial, trait and modeltype a separate .pdf report will be created. Parameters `traits`, `trials` and `what` can be used for specifying the models for which the reports should be made.
+Reporting for an `SSA` object can be done for multiple trials, traits and modeltypes simultaneously. For each combination of trial, trait and modeltype, a separate .pdf report will be created. Parameters `traits`, `trials` and `what` can be used for specifying the models for which the reports should be made.
 
 ----
 
 # Extracting model results
 
-After fitting a model, various results can be extracted or calculated from the fitted model using the function `extract`. This can be anything from a single result for one trait and one trial to a `list` of different results for all models in an `SSA` object. The results that can be extracted depend on the type of model fitted and sometimes on the modeling engine as well. For example, BLUEs can only extracted if genotype was fitted as fixed effect whereas BLUPs and heritabilities can only be extracted and calculated if genotype was fitted as random effect.  
+After fitting a model, various results can be extracted or calculated from the fitted model using the function `extract`. This can be anything from a single result for one trait and one trial to a `list` of different results for all models in an `SSA` object. The results that can be extracted depend on the type of model fitted and sometimes on the modeling engine as well. For example, BLUEs can only extracted if genotype was fitted as fixed effect. On the other hand BLUPs and heritabilities can only be calculated and extracted if genotype was fitted as random effect.  
 
 All results that can be extracted are shown in the table below. The first column shows what model needs to be fitted in order to be able to extract the result. Here F stands for genotype as fixed effect and R for genotype as random effect. In the second column is the result. This is also the value to be used for the parameter `what` in `extract` needed to extract the corresponding result. The last column gives a short description of the result that will be extracted and, where needed, also states for which modeling engines it can be extracted.
 
 ```{r extractOpts, results="as.is", echo=FALSE, out.width = "\\textwidth"}
 ## Generate table of options for extract from internal data.
-knitr::kable(statgenSSA:::extractOptions[, 1:3], 
-                     align = c("l", "l", "l", "l"), row.names = FALSE)
+optsTab <- statgenSSA:::extractOptions[, c("result", "model", "description")]
+optsTab <- optsTab[order(optsTab[["model"]]), ]
+knitr::kable(optsTab, align = c("llll"), row.names = FALSE)
 ```
 
 Using `what = "all"` in the function call, extracts all results possible for the fitted model. This is also the default.  
@@ -327,7 +339,7 @@ The `data.frame` BLUEs in either of the `lists` consists of only two columns, ge
 BLUEsWheat2 <- extract(SSA = modWheatSp, what = "BLUEs", keep = "trial")
 head(BLUEsWheat2[["SR_FI_11"]]$BLUEs)
 ```
-Not every column from the original `TD` object can be included in the extracted data in this way. Only columns for which the values are uniform per genotype can be included. For example, the column `repId` containing replicates, that has several different values for a single genotype, cannot be included. When trying to do so it will be dropped with a warning.  
+Not every column from the original `TD` object can be included in the extracted data in this way. Only columns that for each genotype have only one value per trial can be included. For example, the column `repId` containing replicates, that has several different values for a single genotype, cannot be included. When trying to do so it will be dropped with a warning.  
 It is however possible to include `repId` when extracting fitted values, since for each observation in the original data a fitted value is computed. 
 ```{r extFit}
 ## Extract fitted values from the model.
