Renamed SSA to STA

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,5 @@
 ---
-title:  statgenSSA
+title:  statgenSTA
 output: github_document
 ---
 
@@ -15,11 +15,11 @@ knitr::opts_chunk$set(
 ```
 
 <!-- badges: start -->
-[![pipeline status](https://git.wur.nl/statistical-genetic-pipeline/statgenSSA/badges/master/pipeline.svg)](https://git.wur.nl/statistical-genetic-pipeline/statgenSSA/commits/master)
-[![coverage report](https://git.wur.nl/statistical-genetic-pipeline/statgenSSA/badges/master/coverage.svg)](https://git.wur.nl/statistical-genetic-pipeline/statgenSSA/commits/master)
+[![pipeline status](https://git.wur.nl/statistical-genetic-pipeline/statgenSTA/badges/master/pipeline.svg)](https://git.wur.nl/statistical-genetic-pipeline/statgenSTA/commits/master)
+[![coverage report](https://git.wur.nl/statistical-genetic-pipeline/statgenSTA/badges/master/coverage.svg)](https://git.wur.nl/statistical-genetic-pipeline/statgenSTA/commits/master)
 <!-- badges: end -->
 
-R package for single site analysis
+R package for single trial analysis
 
 ## Installation
 
@@ -29,7 +29,7 @@ For direct installation from gitlab use the following code:
 ## Replace the location for public and private key with your own.
 creds <- git2r::cred_ssh_key(publickey = "C:\\users\\...\\.ssh\\id_rsa.pub",
                              privatekey = "C:\\users\\...\\.ssh\\id_rsa")
-remotes::install_git(url = "git@git.wur.nl:statistical-genetic-pipeline/statgenSSA.git", credentials = creds)
+remotes::install_git(url = "git@git.wur.nl:statistical-genetic-pipeline/statgenSTA.git", credentials = creds)
 
 ```
 
